fixed hotel description formatting issue with white-space: pre-wrap

--- a/src/components/Description/Description.css
+++ b/src/components/Description/Description.css
@@ -1,3 +1,7 @@
 .description-container {
   border: solid 1px black;
 }
+
+.hotel-description {
+  white-space: pre-wrap;
+}
